# tsgo-strict

./: .gitignore  BENCHMARKS.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  deny.toml  eslint.config.mjs  license-header.txt  licenserc-headers.toml  licenserc.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
.husky/: pre-push
crates/tsgo-strict/: Cargo.toml
crates/tsgo-strict-core/: Cargo.toml
crates/tsgo-strict-core/src/: binary.rs  diagnostics.rs  diff.rs  errors.rs  lib.rs  options.rs  perf.rs
crates/tsgo-strict-core/src/config/: base_url.rs  extends.rs  mod.rs  plugin.rs  tsconfig.rs  type_roots.rs  v6_compat.rs
crates/tsgo-strict-core/src/files/: mod.rs  pragma.rs  project.rs  resolve.rs  selection.rs
crates/tsgo-strict-core/src/format/: json.rs  mod.rs  text.rs
crates/tsgo-strict-core/src/runner/: mod.rs  parse.rs  pipeline.rs  spawn.rs  temp_config.rs
crates/tsgo-strict-napi/: Cargo.toml  build.rs
crates/tsgo-strict-napi/src/: lib.rs
crates/tsgo-strict/src/: main.rs
docs/: benchmarks.md  contributing.md  index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/guide/: configuration.md  getting-started.md  how-it-works.md  incremental-migration.md  introduction.md  pragmas.md
docs/reference/: api.md  cli.md  exit-codes.md
npm/tsgo-strict/: README.md  index.d.ts  index.js  install.js  package.json
npm/tsgo-strict/lib/: resolve.js
npm/tsgo-strict/test/: napi.test.mjs
perf-demo/: README.md  package.json  tsconfig.json
perf-demo/scripts/: generate.mjs
perf-demo/src/: index.ts
perf-demo/src/batch-00/: file-0000.ts  file-0001.ts  file-0002.ts  file-0003.ts  file-0004.ts  file-0005.ts  file-0006.ts  file-0007.ts  file-0008.ts  file-0009.ts  file-0010.ts  file-0011.ts  file-0012.ts  file-0013.ts  file-0014.ts  file-0015.ts  file-0016.ts  file-0017.ts  file-0018.ts  file-0019.ts  file-0020.ts  file-0021.ts  file-0022.ts  file-0023.ts  file-0024.ts  file-0025.ts  file-0026.ts  file-0027.ts  file-0028.ts  file-0029.ts  file-0030.ts  file-0031.ts  file-0032.ts  file-0033.ts  file-0034.ts  file-0035.ts  file-0036.ts  file-0037.ts  file-0038.ts  file-0039.ts  (+160 more)
perf-demo/src/batch-01/: file-0200.ts  file-0201.ts  file-0202.ts  file-0203.ts  file-0204.ts  file-0205.ts  file-0206.ts  file-0207.ts  file-0208.ts  file-0209.ts  file-0210.ts  file-0211.ts  file-0212.ts  file-0213.ts  file-0214.ts  file-0215.ts  file-0216.ts  file-0217.ts  file-0218.ts  file-0219.ts  file-0220.ts  file-0221.ts  file-0222.ts  file-0223.ts  file-0224.ts  file-0225.ts  file-0226.ts  file-0227.ts  file-0228.ts  file-0229.ts  file-0230.ts  file-0231.ts  file-0232.ts  file-0233.ts  file-0234.ts  file-0235.ts  file-0236.ts  file-0237.ts  file-0238.ts  file-0239.ts  (+160 more)
perf-demo/src/batch-02/: file-0400.ts  file-0401.ts  (+198 more)
rust-sibling/: Cargo.toml
rust-sibling/src/: main.rs
scripts/: bench-vs-tsc-strict.sh  bench.sh  license-header.mjs  stage-local-addon.sh  stamp-versions.mjs
src/: cli.ts
src/config/: loadTsconfig.ts  strictFileSelection.ts
src/diag/: diff.ts  normalize.ts
src/files/: resolveSubset.ts
src/output/: formatJson.ts  formatText.ts
src/perf/: timing.ts
src/runner/: tsgoRunner.ts
src/types/: index.ts
test/unit/: diff.test.ts  formatText.test.ts  resolveSubset.test.ts  strictFileSelection.test.ts
(+3450 files in other folders)
