[workspace]
resolver = "2"
members = ["crates/tsgo-strict", "crates/tsgo-strict-core", "crates/tsgo-strict-napi"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/coralogix/internal-tsgo-strict"
description = "High-performance strict-only TypeScript checking with tsgo and subset file support"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonc-parser = { version = "0.26", features = ["serde"] }
ignore = "0.4"
globset = "0.4"
rayon = "1"
regex = "1"
memchr = "2"
once_cell = "1"
tempfile = "3"
which = "7"
strip-ansi-escapes = "0.2"
camino = { version = "1", features = ["serde1"] }
pathdiff = { version = "0.2", features = ["camino"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
