[package]
name = "tsgo-strict-napi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "N-API bindings for tsgo-strict's core pipeline"

[lib]
crate-type = ["cdylib"]

[dependencies]
tsgo-strict-core = { path = "../tsgo-strict-core" }
camino.workspace = true
napi = { version = "2", default-features = false, features = ["napi6", "tokio_rt"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
